--- a/src/user/components/UserItem.css
+++ b/src/user/components/UserItem.css
@@ -11,13 +11,13 @@
   height: 100%;
   text-decoration: none;
   padding: 1rem;
-  color: white;
-  background: #924d6f;
+  color: #8aed07;
+  background: #08afa8;
 }
 
 .user-item a:hover,
 .user-item a:active {
-  background: #ffa500;
+  background: #8aed07;
 }
 
 .user-item__content {
@@ -34,14 +34,14 @@
   font-size: 1.5rem;
   margin: 0 0 0.5rem 0;
   font-weight: normal;
-  color: #ffa500;
+  color: white;
 }
 
 .user-item:hover h2,
 .user-item:active h2,
 .user-item:hover h3,
 .user-item:active h3 {
-  color: #292929;
+  color: black;
 }
 
 .user-item__info h3 {
