--- a/src/places/pages/PlaceForm.css
+++ b/src/places/pages/PlaceForm.css
@@ -6,6 +6,6 @@
   max-width: 40rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 6px;
-  background: #924d6f;
-  color: #ffa500;
+  background: #08afa8;
+  color: black;
 }
