--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #ffa500;
+  background: #08afa8;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   padding: 0 1rem;
   z-index: 5;
